<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textView_musk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/musk_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_bezos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bezos_0"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="332dp"
        android:layout_height="333dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        android:background="#090808"
        app:layout_constraintBottom_toTopOf="@+id/textView_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_musk">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/top_left"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/top_middle"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/top_right"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/middle_left"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/middle_middle"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/middle_right"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/bottom_left"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/bottom_middle"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/bottom_right"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/button_newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_game"
        app:layout_constraintEnd_toStartOf="@+id/button_mainMenu"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_message" />

    <Button
        android:id="@+id/button_mainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_newGame"
        app:layout_constraintTop_toBottomOf="@+id/textView_message" />
</androidx.constraintlayout.widget.ConstraintLayout>